--- a/index.html
+++ b/index.html
@@ -1387,13 +1387,13 @@
                     </p>
                     
                     <div class="flex gap-4">
-                        <a href="#" class="w-12 h-12 rounded-xl bg-white/5 flex items-center justify-center hover:bg-[#45a7b9]/20 hover:border-[#45a7b9]/30 border border-white/5 transition-all group">
+                        <a href="https://www.instagram.com/kvant.ia/" class="w-12 h-12 rounded-xl bg-white/5 flex items-center justify-center hover:bg-[#45a7b9]/20 hover:border-[#45a7b9]/30 border border-white/5 transition-all group">
                             <i class="fab fa-instagram text-gray-400 group-hover:text-[#45a7b9] transition-colors text-lg"></i>
                         </a>
                         <a href="#" class="w-12 h-12 rounded-xl bg-white/5 flex items-center justify-center hover:bg-[#45a7b9]/20 hover:border-[#45a7b9]/30 border border-white/5 transition-all group">
                             <i class="fab fa-facebook-f text-gray-400 group-hover:text-[#45a7b9] transition-colors text-lg"></i>
                         </a>
-                        <a href="#" class="w-12 h-12 rounded-xl bg-white/5 flex items-center justify-center hover:bg-[#45a7b9]/20 hover:border-[#45a7b9]/30 border border-white/5 transition-all group">
+                        <a href="https://www.linkedin.com/company/kvant-ia" class="w-12 h-12 rounded-xl bg-white/5 flex items-center justify-center hover:bg-[#45a7b9]/20 hover:border-[#45a7b9]/30 border border-white/5 transition-all group">
                             <i class="fab fa-linkedin-in text-gray-400 group-hover:text-[#45a7b9] transition-colors text-lg"></i>
                         </a>
                     </div>
@@ -2148,4 +2148,5 @@ Versão 1.0 — Dezembro/2024</p>
     </script>
 </body>
 </html>
+
 
